SERVER-12111 Make sure usersInfo can always find users when midway through the auth schema upgrade